Fixed to work with Java 8, bug fixes and level curve work